syntax = "proto3";

package chat;

service Chat {
     rpc ReciveData(ChatRequest) returns (ChatResponse) {}
}

message StringData {
    sint64 from = 1;
    sint64 to = 2;
    sint64 type = 3;
    sint64 datatype = 4;
    string data = 5;
}

message FileData {
    bytes file = 1;
}

message ChatRequest {
     StringData data = 1;
     FileData file = 2;
}

message ChatResponse {
     int32 status = 1;
     string message = 2;
}